--- a/views/welcome/index.handlebars
+++ b/views/welcome/index.handlebars
@@ -1,1 +1,31 @@
-<h1>Hello Express!</h1>
+<div class="container">
+    <div class="page-header">
+        <h1>Searching<span class="pull-right label label-default"></span></h1>
+    </div>
+    <div class="row">
+        <div class="col-md-12">
+            <div class="panel with-nav-tabs panel-primary">
+                <div class="panel-heading">
+                        <ul class="nav nav-tabs">
+                            <li class="active"><a href="#tab1primary" data-toggle="tab">Primary 1</a></li>
+                            <li><a href="#tab2primary" data-toggle="tab">Primary 2</a></li>
+                            <li><a href="#tab3primary" data-toggle="tab">Primary 3</a></li>
+                            <li><a href="#tab4primary" data-toggle="tab">Primary 4</a></li>
+                            <li><a href="#tab5primary" data-toggle="tab">Primary 5</a></li>
+                        </ul>
+                </div>
+                <div class="panel-body">
+                    <div class="tab-content">
+                        <div class="tab-pane fade in active" id="tab1primary">Primary 1</div>
+                        <div class="tab-pane fade" id="tab2primary">Primary 2</div>
+                        <div class="tab-pane fade" id="tab3primary">Primary 3</div>
+                        <div class="tab-pane fade" id="tab4primary">Primary 4</div>
+                        <div class="tab-pane fade" id="tab5primary">Primary 5</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-3">
+        </div>
+	</div>
+</div>
