--- a/views/welcome/index.handlebars
+++ b/views/welcome/index.handlebars
@@ -16,7 +16,20 @@
                 </div>
                 <div class="panel-body">
                     <div class="tab-content">
-                        <div class="tab-pane fade in active" id="tab1primary">Primary 1</div>
+                        <div class="tab-pane fade in active" id="tab1primary">
+                          <form action='/' method='post'>
+                            <input type='radio' id='gender' name='gender'>Male</input>
+                            <input type='radio' id='gender' name='gender'>Female</input>
+                            <label for='age'>Age</label>
+                            <select name="asdf" id="asdf" class='form-control'>
+                              {{#times start=20 stop=99 as |age| }}
+                                <option value="{{ age }}">{{ age }}</option>
+                              {{/times }}
+                            </select>
+                            <input type></input>
+                            <input type></input>
+                          </form>
+                        </div>
                         <div class="tab-pane fade" id="tab2primary">Primary 2</div>
                         <div class="tab-pane fade" id="tab3primary">Primary 3</div>
                         <div class="tab-pane fade" id="tab4primary">Primary 4</div>
@@ -29,3 +42,15 @@
         </div>
 	</div>
 </div>
+
+
+<script>
+// $(document).ready(){
+//   $(function(){
+//       var $select = $(".1-100");
+//       for (i=1;i<=100;i++){
+//           $select.append($('<option></option>').val(i).html(i))
+//       }
+//   });​
+// };
+</script>
