--- a/views/welcome/index.handlebars
+++ b/views/welcome/index.handlebars
@@ -1,56 +1,105 @@
 <div class="container">
-    <div class="page-header">
-        <h1>Searching<span class="pull-right label label-default"></span></h1>
-    </div>
-    <div class="row">
-        <div class="col-md-12">
-            <div class="panel with-nav-tabs panel-primary">
-                <div class="panel-heading">
-                        <ul class="nav nav-tabs">
-                            <li class="active"><a href="#tab1primary" data-toggle="tab">Primary 1</a></li>
-                            <li><a href="#tab2primary" data-toggle="tab">Primary 2</a></li>
-                            <li><a href="#tab3primary" data-toggle="tab">Primary 3</a></li>
-                            <li><a href="#tab4primary" data-toggle="tab">Primary 4</a></li>
-                            <li><a href="#tab5primary" data-toggle="tab">Primary 5</a></li>
-                        </ul>
-                </div>
-                <div class="panel-body">
-                    <div class="tab-content">
-                        <div class="tab-pane fade in active" id="tab1primary">
-                          <form action='/' method='post'>
-                            <input type='radio' id='gender' name='gender'>Male</input>
-                            <input type='radio' id='gender' name='gender'>Female</input>
-                            <label for='age'>Age</label>
-                            <select name="asdf" id="asdf" class='form-control'>
-                              {{#times start=20 stop=99 as |age| }}
-                                <option value="{{ age }}">{{ age }}</option>
-                              {{/times }}
-                            </select>
-                            <input type></input>
-                            <input type></input>
-                          </form>
-                        </div>
-                        <div class="tab-pane fade" id="tab2primary">Primary 2</div>
-                        <div class="tab-pane fade" id="tab3primary">Primary 3</div>
-                        <div class="tab-pane fade" id="tab4primary">Primary 4</div>
-                        <div class="tab-pane fade" id="tab5primary">Primary 5</div>
-                    </div>
-                </div>
+  <div class="page-header">
+    <h1>Search for Your Viking Partner<span class="pull-right label label-default"></span></h1>
+  </div>
+  <div class="row">
+    <!--<form action='/' method='post'>-->
+    <div class="col-xs-11">
+      <div class="panel with-nav-tabs panel-primary">
+        <div class="panel-heading">
+          <ul class="nav nav-tabs">
+            <li class="active"><a href="#tab1primary" data-toggle="tab">Basics</a></li>
+            <li><a href="#tab2primary" data-toggle="tab">Appearance</a></li>
+            <li><a href="#tab3primary" data-toggle="tab">Weapons</a></li>
+            <li><a href="#tab4primary" data-toggle="tab">Occupation</a></li>
+            <li><a href="#tab5primary" data-toggle="tab">Education</a></li>
+            <li><a href="#tab6primary" data-toggle="tab">Children</a></li>
+            <li><a href="#tab7primary" data-toggle="tab">Pets</a></li>
+          </ul>
+        </div>
+        <div class="panel-body">
+          <div class="tab-content">
+              <div class="tab-pane fade in active" id="tab1primary">
+                <div class="col-xs-2">
+                <label for="gender">Gender:</label><br>
+                <input type='radio' name='gender' value="male">Male</input><br>
+                <input type='radio' name='gender' value="female">Female</input>
+              </div>
+              <div class="col-xs-3">
+                <label for='age'>Age</label>
+                <select name="asdf" id="asdf" class='form-control'>
+                  {{#times start=18 stop=99 as |age| }}
+                    <option value="{{ age }}">{{ age }}</option>
+                  {{/times }}
+                </select>
+              </div>
+              <div class="col-xs-3">
+                <label for='distance'>Distance:</label>
+                <select name="distance" class="form-control">
+                  <option value="5">5 Miles</option>
+                  <option value="10">10 Miles</option>
+                  <option value="25">25 Miles</option>
+                  <option value="50">50 Miles</option>
+                </select>
+              </div>
+              <div class="col-xs-3">
+                <label for="status">Status:</label><br>
+                <input type="checkbox" name="status" value="single">Single</input><br>
+                <input type="checkbox" name="status" value="dating">Dating</input><br>
+                <input type="checkbox" name="status" value="married">Married</input><br>
+                <input type="checkbox" name="status" value="divorced">Divorced</input><br>
+                <input type="checkbox" name="status" value="complicated">It's Complicated</input>
+              </div>
             </div>
+            <div class="tab-pane fade" id="tab2primary">
+              <div class="col-xs-3">
+                <h4>Height:</h4>
+                <label for="feet">Feet:</label>
+                <input type="number" name="feet" min="4" max="8" placeholder="5"></input>
+                <label for="inches">Inches:</label>
+                <input type="number" name="inches" min="1" max="11" placeholder="0"></input>
+              </div>
+            <div class="col-xs-3">
+              <h4>Hair Color:</h4>
+              <select name="hair" class="form-control">
+                <option value="blonde">Blonde</option>
+                <option value="brown">Brown</option>
+                <option value="black">Black</option>
+                <option value="red">Red</option>
+                <option value="gray">Gray</option>
+                <option value="bald">Bald</option>
+                <option value="other">Other</option>
+              </select>
+            </div>
+            <div class="col-xs-3">
+              <h4>Eye Color:</h4>
+              <select name="hair" class="form-control">
+                <option value="blue">Blue</option>
+                <option value="brown">Brown</option>
+                <option value="green">Green</option>
+                <option value="hazel">Hazel</option>
+                <option value="gray">Gray</option>
+              </select>
+            </div>
+            <div class="col-xs-3">
+              <h4>Body Type:</h4>
+              <input type='radio' name='body-type' value="fit">Fit</input><br>
+              <input type='radio' name='body-type' value="average">Average</input><br>
+              <input type='radio' name='body-type' value="eh">Eh...</input><br>
+              <input type='radio' name='body-type' value="overweight">Overweight</input><br>
+          </div>
         </div>
-        <div class="col-md-3">
-        </div>
-	</div>
+        <div class="tab-pane fade" id="tab3primary">Weapons</div>
+        <div class="tab-pane fade" id="tab4primary">Occupation</div>
+        <div class="tab-pane fade" id="tab5primary">Education</div>
+        <div class="tab-pane fade" id="tab6primary">Children</div>
+        <div class="tab-pane fade" id="tab7primary">Pets</div>
+      </div>
+    </div>
+  </div>
+<div class="col-xs-1">
+  <!--<button type="submit" class="btn btn-primary btn-lg">Search</button>
+  </form>-->
 </div>
-
-
-<script>
-// $(document).ready(){
-//   $(function(){
-//       var $select = $(".1-100");
-//       for (i=1;i<=100;i++){
-//           $select.append($('<option></option>').val(i).html(i))
-//       }
-//   });​
-// };
-</script>
+</div>
+</div>
