--- a/views/welcome/index.handlebars
+++ b/views/welcome/index.handlebars
@@ -3,7 +3,7 @@
     <h1>Search for Your Viking Partner<span class="pull-right label label-default"></span></h1>
   </div>
   <div class="row">
-    <!--<form action='/' method='post'>-->
+    <form action='/' method='post'>
     <div class="col-xs-11">
       <div class="panel with-nav-tabs panel-primary">
         <div class="panel-heading">
@@ -59,7 +59,7 @@
                 <label for="inches">Inches:</label>
                 <input type="number" name="inches" min="1" max="11" placeholder="0"></input>
               </div>
-            <div class="col-xs-3">
+            <div class="col-xs-2">
               <h4>Hair Color:</h4>
               <select name="hair" class="form-control">
                 <option value="blonde">Blonde</option>
@@ -98,8 +98,38 @@
     </div>
   </div>
 <div class="col-xs-1">
-  <!--<button type="submit" class="btn btn-primary btn-lg">Search</button>
-  </form>-->
+  <button type="submit" class="btn btn-primary btn-lg">Search</button>
+  </form>
+  <div class='row'>
+    <div class='col-sm-12'>
+  <table class="table">
+    <tbody>
+      {{#each users as |user| }}
+      <tr>
+        <td>
+          <a href="/users/{{ user.id }}">{{ user.fname }}</a>
+        </td>
+        <td>
+          <a href="/users/{{ user.id }}">{{ user.lname }}</a>
+        </td>
+        <td>
+          <a href="/users/{{ user.id }}">{{ user.username }}</a>
+        </td>
+        <td>
+          <a href="/users/{{ user.id }}">{{ user.email }}</a>
+        </td>
+        <td>
+          <a href="/users/{{ user.id }}/edit">Edit</a>
+        </td>
+        <td>
+          <a href="/users/{{ user.id }}?_method=delete" class="text-danger">Delete</a>
+        </td>
+      </tr>
+      {{/each }}
+    </tbody>
+  </table>
+</div>
+</div>
 </div>
 </div>
 </div>
